--- a/TIL/TIL_20241226.md
+++ b/TIL/TIL_20241226.md
@@ -25,4 +25,5 @@
   ```
 </details>
 
-2.  Set timer by handle 에서 타이머 구조체를 따로 설정하지 않으면 2개 이상의 해당 노드 사용 시 타이머가 공유되는 문제가 있다.
+2.  Set timer by event 에서 타이머 구조체를 따로 설정하지 않으면 2개 이상의 해당 노드 사용 시 타이머가 공유되는 문제가 있다.
+3.  Set timer by event 에서 time을 2초로 설정한 후, 2초마다 애니메이션 점프 노드를 실행하고 해당 애니메이션의 마지막 프레임에 Notify를 배치해서 이 Notify 실행 시 custom event를 실행하도록 했다. 그러나 의도와는 다르게 해당 애니메이션만 무한 반복되는 오류를 겪었다. 이를 해결하기위해 오늘 5시간 내내 잡고 이것저것 테스트해봤는데 결국 문제는 Time Remaining (animation) <= 0.0 으로 설정한 데에 있었다. 기존 예제에서 Time Remaining(animation) < 0.1 으로 설정되어있었는데, 0.1초 만큼의 애니메이션 재생이 중단되는 것이 불만족스러워서 그렇게 변경했다. 그러나 이는 해당 노드의 전환이 제대로 일어나지 않도록 문제를 만들었는데, 기본 애니메이션이 loop로 설정되어있고 Time Remaining값이 0.0일때 조건을 비교하는 와중에 다시 초기화되기 때문에 제대로 비교가 되지 않고 무한 반복되는 것이라고 판단했다. 
