--- a/TIL/TIL_20241227.md
+++ b/TIL/TIL_20241227.md
@@ -1,2 +1,3 @@
 1. c++ vector 행렬의 초기화는 vector<vector<int>> arr = ((int)size1, vector<int>((int)size2)) 이어야한다. 행의 개수는 size1이고 열의 개수는 vector<int>(size2)인데, 이유는 열의 항목이 vector<int>이기 때문이다.
 2. 문자열<->숫자 관련 문제 풀 때, 숫자가 int 범위를 초과하는 경우가 많아서 stoi 대신 stoll를 기본적으로 쓰도록 해야겠다.
+3. 블프 작성 시에는 Tag 칸이 없어도, 레벨에 배치하면 디테일 칸에서 액터-태그 칸에서 태그를 추가할 수 있다.
