--- a/TIL/TIL_20241231.md
+++ b/TIL/TIL_20241231.md
@@ -2,3 +2,4 @@
    학부 때 MFC를 사용해서 간단한 멀티플레이용 대전 게임을 만들기는 했는데, 지금 연습하려고 보고 있는 [유저수만큼다양한섬을만들자](https://www.slideshare.net/sunwungjin/ss-35289909?from_search=25)에서 Winforms을 사용하여 간단하게 프로그램을 만들었다고하길래 똑같이 해보려고한다.
    지금 C++을 배우고 있으니 C# 대신 C++로 구현하려고 찾아봤는데, [visual studio 2017에 c++ winforms 창 띄우기](https://vipeveloper.tistory.com/32)를 그대로 했더니 Visual Studio 2022 에서도 원활하게 작동됐다.
    다만 CLR Empty project(.NET)과 CLR Empty project(.NET Framework) 둘 중 어느 것으로 해야할 지 고민하다가 (.NET) 버전은 환경이 Windows가 아니어도 된다길래 욕심내서 클릭했다가 UI 창을 구성하는 MyForm.h에 오류만 떠서 (.Net Framework)로 변경했다.
+2. Perlin Noise를 구현한 C++ 코드가 깃허브에 널려있길래 가져다가 필요한 모양새로 개조하려 했는데 워낙 코드도 길고 해서 실패했다... 그래서 Perlin Noise를 구현하려고 하루종일 구글링하면서 찾고있는데 수학적인 내용에 진행률이 급감해버렸다... 오늘 못했으니 내일 마저해야겠다.
