--- a/TIL/TIL_20250106.md
+++ b/TIL/TIL_20250106.md
@@ -1,3 +1,4 @@
 1. 타일로 이루어진 세계를 동적으로 생성하는 방법을 연습 중인데, Quixel Bridge에서 가져온 grass 텍스쳐로 paper2d tileset을 설정 시 흐릿하게 나오는 문제가 있다.
  이것저것 설정 바꿔봐도 똑같아서 머리가 아팠는데 텍스처 파일->디테일->텍스쳐->고급->버추얼 텍스처 스트리밍의 체크를 해제하니 해결되었다.
 왜 virtual texture streaming 옵션을 사용했는지는 아직 잘 모르겠다.
+2. 코드 뜯어보려고 코드 에셋을 Fab에서 하나 사서 UI 부분을 확인 중이었는데, 디테일에서 크기를 아무리 변경해도 원래대로 돌아왔다. 찾아보니 이벤트그래프에서 Event Preconstruct 노드에서 사이즈를 정해놓았기 때문이다. 이를 사용하면 건드리지 말아야하는 값을 미리 정해놓아 나중에 까먹고 문제 만들 일이 적어질 것 같다.
