--- a/TIL/TIL_20250107.md
+++ b/TIL/TIL_20250107.md
@@ -1,2 +1,3 @@
 1. 52번 콜라문제를 푸는데 간단한 문제라서 로직 짜는데 1분도 걸리지 않았다. 다만 계속 실패하길래 예외 테케가 도대체 뭔지 한참 고민했지만 알 수 없었다. 결국 답은 오버플로우에 있었는데, int에 값을 저장하는데 곱하기->나누기 순으로 진행해서 범위를 초과한 듯 하다. 앞으로는 값이 커질 것을 염려하여 나누기를 먼저 진행해야겠다.
 2. SpawnActor from class를 사용하여 AI 생성 시, 움직이지 않는 문제가 있다. 이는 해당 액터-AI Auto Possess AI-Placed in World or Spawned 로 변경하여 해결할 수 있다.
+3. UI의 SizeBox를 추가하고, 너비 오버라이드와 높이 오버라이드를 0으로 하면 UI에서 공간을 차지하지 않는다.
