--- a/TIL/TIL_20250108.md
+++ b/TIL/TIL_20250108.md
@@ -1,1 +1,3 @@
 1. lerp를 이용한 타임라인 사용 시, update 노드 전에 미리 vector 계산하고 와야한다.
+2. c++로 언리얼엔진에서 개발할 때, 라이브 코딩을 사용하면 간편하긴하지만 에러가 발생할 수 있으니 안 쓰는 것에 익숙해져야한다..
+3. 프로젝트 코드 파일에서 F5로 빌드하면 프로젝트 언리얼엔진 에디터가 켜지는데, 이 상태에서는 프로젝트 수정 후 Crtl + Shift + F5를 누르면 에디터가 알아서 껐다 켜진다.
