--- a/TIL/TIL_20250109.md
+++ b/TIL/TIL_20250109.md
@@ -1,4 +1,20 @@
 1. 카메라 회전 시 월드 경계를 넘어가는 것을 방지하기 위해, Spring Arm의 콜리전 테스트 실행을 True로 설정했다. 오브젝트를 클릭 시 해당 오브젝트에게 Spring Arm(camera as child)을 Attach 하는 구조인데, 이때 땅에 처박히는 현상이 발생했다.
    스태틱 메시 컴포넌트의 콜리전 문제인가 해서 1시간 내내 찾았는데 결국 답은 오브젝트가 땅에 너무 깊게 박혀있었기 때문에 해당 오브젝트로 카메라 이동 시 오브젝트와 땅 사이에 Spring Arm이 갇혀있던 것이다(...)
-3. 에셋 별로 설정하기 번거로워서 다수의 에셋을 선택한 후 우클릭하여 에셋 액션 - 프로퍼티 매트릭스에서 선택 편집 - 디테일 - 스태틱 메시 - 바디 구성 - 콜리전 프리셋 값을 Custom으로 변경하려하자 에디터가 Crash되며 종료됐다. 아마 서로 다른 값들을 한번에 못 불러와서 그런 것 같다.
+2. 에셋 별로 설정하기 번거로워서 다수의 에셋을 선택한 후 우클릭하여 에셋 액션 - 프로퍼티 매트릭스에서 선택 편집 - 디테일 - 스태틱 메시 - 바디 구성 - 콜리전 프리셋 값을 Custom으로 변경하려하자 에디터가 Crash되며 종료됐다. 아마 서로 다른 값들을 한번에 못 불러와서 그런 것 같다.
    이는 콜리전 프리셋 값을 오른쪽의 꺾인 화살표 버튼을 눌러서 초기화시키면 Custom으로 통일된다. 이후에는 Crash 없이 설정 변경 가능하다.
+3. 음수 % 양수는 음수로 나머지가 나오고, 양수 % 음수는 양수로 나머지가 나온다. 음수 % 음수는 음수로 나머지가 나온다. 콜라츠 추측 문제에서 오버플로우가 나와서 int 형 대신 long을 사용하여 해결하였는데 팀원분이 else에 if(n%2==1)을 추가할 시 문제가 해결된다고 하셔서 찾아봤다. 기존 아이디어는 'n%2 는 홀수 혹은 짝수 밖에 나오지 않을 것이다'였는데, 음수를 나누면 그렇지 않다는 것을 모르고 있었기 때문에 발생한 일이었다.
+```
+while(true){
+if(n%2==0) n /= 2;
+else n = n*3 + 1;
+count++;
+}
+
+vs
+
+while(true){
+if(n%2==0) n /= 2;
+else if(n%2==1) n = n*3 + 1;
+count++;
+}
+```
