--- a/TIL/TIL_20250112.md
+++ b/TIL/TIL_20250112.md
@@ -1,1 +1,2 @@
 1. Size box 와 Scale box 를 사용하여 child로 설정된 text의 size를 동적으로 조절할 수 있다. 그러나 text의 래핑을 허용하면 Size box의 세로 공간이 남아있음에도 text size 부터 줄이고 보는 문제가 있었다. 이는 다음에서 텍스트 래핑 값을 적절히 조정하여 해결할 수 있었다.
+2. 그동안 액터 클릭을 식별하기 위해 trace 방식을 사용하였는데 간단하게 해당 액터에서 Event ActorBeginCursor를 사용해서 제어할 수 있다... 대신 Player controller에서 해당 마우스 이벤트가 활성화 되어있는지 확인한 후, 적절한 충돌 콜리전이 있는지 살펴봐야한다.
