--- a/TIL/TIL_20250115.md
+++ b/TIL/TIL_20250115.md
@@ -1,2 +1,3 @@
 1. actor foliage 는 static mesh foliage에 비해 퍼포먼스를 아주 많이 잡아먹는다.. 그냥 일반 액터 하나로 취급되는 듯 하다.
 2. actor foliage의 actor 블루프린트로 가서 detail에서 distance로 검색하면 드로 디스턴스를 변경할 수 있다. Cull이 안되는 actor foliage를 cull 처럼 사용할 수 있긴하지만 이 자체만으로는 프레임 드랍을 막기 어려웠다.
+3. 기존 actor가 Mobility로 설정되어있어서 이를 Static으로 변경하였으나, actor가 사라지는 문제가 생겼다. 몇 번 테스트해보니 해당 액터의 transform 속성을 가진 모든 컴포넌트를 Static으로 변경해야 정상적으로 생성된다.
