--- a/TIL/TIL_20250116.md
+++ b/TIL/TIL_20250116.md
@@ -1,1 +1,1 @@
-1. 
+1. 기존 4km x 4km 사이즈 레벨에 world partition을 적용했더니 20 fps 정도 향상되었다. 어제 시도한 cull distance 값 변경은 actor에게 큰 영향을 주지 못했다. 렌더링만 비활성화시켰을 뿐 레벨에는 계속 존재하기 때문이다. 그래서 world partition에서 cell size를 적절하게 조절하여 일정 거리 내 actor들만 활성화시키는 방식으로 최적화를 진행했다.
