--- a/TIL/TIL_20250116.md
+++ b/TIL/TIL_20250116.md
@@ -1,1 +1,2 @@
 1. 기존 4km x 4km 사이즈 레벨에 world partition을 적용했더니 20 fps 정도 향상되었다. 어제 시도한 cull distance 값 변경은 actor에게 큰 영향을 주지 못했다. 렌더링만 비활성화시켰을 뿐 레벨에는 계속 존재하기 때문이다. 그래서 world partition에서 cell size를 적절하게 조절하여 일정 거리 내 actor들만 활성화시키는 방식으로 최적화를 진행했다.
+2. world partition을 활성화한 대가로 더이상 actor foliage를 사용할 수 없게 되었다. 찾아보니 2022년도 ue5.0.2 버전 때도 있던 문제라는 데 아직도 안 고쳐진 것을 보니 다른 방법을 찾아야 할 것 같다. actor foliage를 사용한 이유는 actor 블루프린트를 편하게 배치하기 위해서였다. 대신에 static mesh foliage 를 사용하고 상호작용 시 actor를 배치하는 방법을 사용하는 것으로 변경하기로 하였다. 
