--- a/TIL/TIL_20250116.md
+++ b/TIL/TIL_20250116.md
@@ -1,2 +1,5 @@
 1. 기존 4km x 4km 사이즈 레벨에 world partition을 적용했더니 20 fps 정도 향상되었다. 어제 시도한 cull distance 값 변경은 actor에게 큰 영향을 주지 못했다. 렌더링만 비활성화시켰을 뿐 레벨에는 계속 존재하기 때문이다. 그래서 world partition에서 cell size를 적절하게 조절하여 일정 거리 내 actor들만 활성화시키는 방식으로 최적화를 진행했다.
 2. world partition을 활성화한 대가로 더이상 actor foliage를 사용할 수 없게 되었다. 찾아보니 2022년도 ue5.0.2 버전 때도 있던 문제라는 데 아직도 안 고쳐진 것을 보니 다른 방법을 찾아야 할 것 같다. actor foliage를 사용한 이유는 actor 블루프린트를 편하게 배치하기 위해서였다. 대신에 static mesh foliage 를 사용하고 상호작용 시 actor를 배치하는 방법을 사용하는 것으로 변경하기로 하였다. 
+3. foliage 혹은 actor들은 조금 늦게 렌더링 되더라도 그러려니하고 넘어갈 수 있지만, 멀리있는 땅의 경계에 다다르기 전까지 그 너머의 땅이 보이지 않는 것은 너무 보기가 싫어서 해결방법을 찾고있었다.
+   또한 바다같이 맵 외곽에 크게 배치되어있는 actor의 경우 해당 actor의 중심에서 멀어지면 보이지 않는 문제도 있었다. 게다가 특정 오브젝트가 시작시 cell size 범위를 벗어난 경우 활성화가 안 되는 문제가 있었다.
+   이는 detail-world partition - IsSpatiallyLoaded 값을 False로 지정하여 해결할 수 있었다. 이 값이 True 일 경우, 스트리밍 소스 내에 있어야하는데 기본적으로는 player controller가 이에 해당한다. 따라서 이 값을 False 지정하여 스트리밍 소스와 상관없이 활성화 되게하여 원하는 대로 바꿀 수 있었다.
