--- a/TIL/TIL_20250116.md
+++ b/TIL/TIL_20250116.md
@@ -3,3 +3,4 @@
 3. foliage 혹은 actor들은 조금 늦게 렌더링 되더라도 그러려니하고 넘어갈 수 있지만, 멀리있는 땅의 경계에 다다르기 전까지 그 너머의 땅이 보이지 않는 것은 너무 보기가 싫어서 해결방법을 찾고있었다.
    또한 바다같이 맵 외곽에 크게 배치되어있는 actor의 경우 해당 actor의 중심에서 멀어지면 보이지 않는 문제도 있었다. 게다가 특정 오브젝트가 시작시 cell size 범위를 벗어난 경우 활성화가 안 되는 문제가 있었다.
    이는 detail-world partition - IsSpatiallyLoaded 값을 False로 지정하여 해결할 수 있었다. 이 값이 True 일 경우, 스트리밍 소스 내에 있어야하는데 기본적으로는 player controller가 이에 해당한다. 따라서 이 값을 False 지정하여 스트리밍 소스와 상관없이 활성화 되게하여 원하는 대로 바꿀 수 있었다.
+4. collision 있는 foliage 생성 시 foliage 위로 계속 쌓여서 생기는 문제가 있었다. 폴리지 모드 - 배치 - 월드와 콜리전 값을 True로 설정 후, 콜리전 스케일 중 Z 축을 10정도로 적당하게 설정해주면 해결할 수 있다.
