--- a/TIL/TIL_20250121.md
+++ b/TIL/TIL_20250121.md
@@ -1,2 +1,3 @@
 1. 새로 만든 Character를 지면에 배치했는데, 플레이어가 이를 넘어가려고 위에 서면 플레이어가 저 멀리 날아가는 이상한 버그가 생겼다. 고치려고 테스트해보니 Collision - CanCharacterStepUpOn 을 No로 설정해서 생긴 버그였다.
 2. Get Overlapping Actors 노드에서 For Each Loop를 사용했지만, 실제로 반경 내 모든 액터를 가져오지 않는 경우가 있다. 이때는 Get Overlapping Actors에서 얻은 배열을 저장하고 이를 꺼내서 For Each Loop를 사용하면 정상적으로 작동한다.
+3. World Partition 에 의해 Load 되는 경우도 Begin Play에 들어가서 생성 초기 설정들을 Begin Play에 할당하지 말아야 할 경우도 있다.
