--- a/TIL/TIL_20250203.md
+++ b/TIL/TIL_20250203.md
@@ -1,1 +1,2 @@
 1. float 형끼리 정확히 같은 지 비교하는 것보다는 Nearly Equal(float)를 사용하는 것이 좋다. float 형 특성 상 소수점 자리에서 완벽하게 같은 수일 수 없기 때문이다.
+2. UE 프로젝트는 버전을 업그레이드 할 수는 있어도 다운그레이드 할 수는 없다. 언리얼 오브젝트에 버전 정보가 들어가있기때문이다..
