--- a/TIL/TIL_20250217.md
+++ b/TIL/TIL_20250217.md
@@ -4,3 +4,7 @@
    https://forums.unrealengine.com/t/visual-studio-2022-update-17-13-is-insanely-broken-now/2332961/2
    "fasteric100" 의 조언 덕분에 프로젝트를 정상화 할 수 있었다. 계속 멈추는 와중에 프로젝트 명을 우클릭 하고 Set as Startup Project를 누르면 당장은 해결할 수 있다.
    버튼 딸깍 하면 고쳐지는 걸 2일 내내 스트레스 받았다는 사실에 경악을 금치 못했다...
+
+
+2. steam 멀티플레이를 만들어보려고 sdk 를 받았는데 최신버전 받으라고해서 sdk 1.61 버전을 받았다. sdk 1.57이 기본으로 깔려있어서 뭐 설정 좀 바꾸고 했는데 빌드가 계속 오류가 났다... 3시간을 쏟아부었지만 해결할 수 없었다. Visual Studio에서 build 하려고 하면 exit code 8 이라는 에러가 나고 그래서 그냥 다 포기하고 sdk를 1.57 버전으로 재설치했는데 감쪽같이 문제가 싹 사라졌다..
+   다시는 최신 버전을 받지 않을 것이다.
