--- a/TIL/TIL_20250218.md
+++ b/TIL/TIL_20250218.md
@@ -1,1 +1,47 @@
 1. Ue 5.5.3 에서 Character에 Widget Component를 추가하고 Space를 Screen으로 설정할 때, 클라이언트에서는 서버와 클라이언트 모두 다 볼 수 있지만 서버에서는 클라이언트의 Widget을 볼 수 없는 문제가 있다. Ue5 에서 아직 안 고친 일시적 버그 같은데 임시방편으로 Widget Component를 가지고 있는 Actor Blueprint를 만들고 이를 다시 Character에 추가하면 해결할 수 있다.
+
+2. STL 정리
+   
+   ✅ vector는 메모리 연속성이 필요하고, 끝에서 삽입/삭제가 많을 때 적합
+   
+   ✅ deque는 앞뒤에서 삽입/삭제가 많을 때 적합
+   
+   ✅ array는 고정 크기 배열이 필요할 때 사용
+   
+   ✅ list는 중간 삽입/삭제가 빈번하지만 임의 접근이 필요 없을 때 적합
+   
+   ✅ map은 자동 정렬이 필요할 때 적합
+   
+   ✅ unordered_map은 빠른 탐색이 필요하지만 정렬이 필요 없을 때 적합
+   
+   ✅ multimap은 중복 키를 허용하면서 정렬이 필요한 경우 사용
+   
+   ✅ set은 중복이 없고 자동 정렬이 필요할 때 사용
+   
+   ✅ unordered_set은 빠른 탐색이 필요하지만 정렬이 필요 없을 때 사용
+   
+   ✅ multiset은 중복 값이 필요하고 정렬이 필요할 때 사용
+   
+   ✅ stack은 후입선출 구조가 필요한 경우
+   
+   ✅ queue는 선입선출 구조가 필요한 경우
+   
+   ✅ priority_queue는 우선순위 큐가 필요한 경우
+   
+   
+    **(이 아래는 찾으면서 처음 들어보는 생소한 컨테이너.. 아마 안 쓸 것 같다.)**
+    ------------------------------------------------------
+    
+    ✅ span은 배열을 편리하게 참조할 때 사용
+    
+    ✅ bitset은 비트 연산을 효율적으로 수행할 때 사용
+
+
+3. 기본 알고리즘
+   ✅sort(): 범위 내 요소들을 정렬
+
+   ✅reverse(): 범위 내 요소들의 순서를 반전
+
+   ✅find(): 특정 값을 찾음
+
+   ✅accumulate(): 범위 내 값들의 합을 계산
