--- a/TIL/TIL_20250218.md
+++ b/TIL/TIL_20250218.md
@@ -28,8 +28,9 @@
    
    ✅ priority_queue는 우선순위 큐가 필요한 경우
    
+
+   아래는 찾으면서 처음 들어보는 컨테이너.. 잘 안 쓰이는 것 같다.
    
-    **(이 아래는 찾으면서 처음 들어보는 생소한 컨테이너.. 아마 안 쓸 것 같다.)**
     ------------------------------------------------------
     
     ✅ span은 배열을 편리하게 참조할 때 사용
@@ -37,7 +38,7 @@
     ✅ bitset은 비트 연산을 효율적으로 수행할 때 사용
 
 
-3. 기본 알고리즘
+2. 기본 알고리즘
    ✅sort(): 범위 내 요소들을 정렬
 
    ✅reverse(): 범위 내 요소들의 순서를 반전
