--- a/TIL/TIL_20250220.md
+++ b/TIL/TIL_20250220.md
@@ -1,1 +1,4 @@
 1. Visual studio 17.13.1 버전이 새로 나왔다. 버그를 고쳤다는데 찾아보니 사실 고친 게 아니고 뭘 바꿨던 걸 롤백시켰다고 한다. 덕분에 1주일 내내 삽질하던 걸 그만 둘 수 있었다.
+   
+https://learn.microsoft.com/en-us/visualstudio/releases/2022/release-notes#17.13.1
+"Unreal Engine 경험에서 UI 중단을 완화하기 위해 명령줄 인수 드롭다운을 제거했습니다."
